[package]
name = "tbgp"
version = "0.1.0"
authors = ["X"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
array_tool ="*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
ndarray = "*"



[profile.release]
opt-level = 3